# vobes-agent-vscode

./: .gitignore  AGENTS.md  Agends.md  CLAUDE.md  README.md  codexVW.ps1  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
docs/: Analyse-m365-copilot-api-research.md  Analyse-m365-copilot-chat-skill.md  analyse-solver-vs-report-gaps.md  chatgpt-file-upload-protocol.md  howto_chat_notify.md  knowledge_record_powerpoint_agent_vscode_copilot.md  powerpoint_vw_brand_placeholder_mapping.md  protokollseite-vibe-coding.md  skill-routing-redundanz-analyse.md  spec_deep_research.md  teams-token-debugging.md  teams-transkription-mit-sprechern.md  token-verfahren.md  wissensdoku-app-registration-projekt.md
scripts/: budget_db.py  confluence_md_bridge.py  copilot_search.py  dashboard_add_card.py  m365_copilot_chat.py  m365_copilot_graph_token.py  m365_file_reader.py  m365_mail_search_token.py  outlook_token.py  query_local_rag.py  report_utils.py
tests/: TestPPTX.pptx  TestXLSX-lang.xlsx  budget_test.db  conftest.py  test_beauftragungsplanung.py  test_budget.py  test_budget_target_ist_analyse.py  test_chatgpt_research.py  test_el_change.py  test_file_converter.py  test_file_converter_e2e.py  test_file_llm_converter.py  test_json_sanitize.py  test_m365_copilot_graph_token.py  test_m365_mail_agent.py  test_m365_mail_search.py  test_m365_mail_search_token.py  test_outlook_appointment_tools.py  test_outlook_find_appointment_slot.py  test_outlook_search_tools.py  test_outlook_token.py  test_query_local_rag_wrapper.py  test_stage2_solver.py
(+153 files in other folders)
