[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vobes-agent"
version = "0.1.0"
description = "KI-Agent-Toolset fuer VOBES/Bordnetz-Entwicklung (Skripte, Skills, Tests)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "tabulate>=0.9",
    "openpyxl>=3.1",
    "pywin32>=306; platform_system=='Windows'",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
